# glm-responses-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
scripts/: sync_test_run.sh  verify_glm_capabilities.py  verify_multimodal_proxy.py  verify_multimodal_upstream.py  verify_responses_proxy.py
src/glm_responses_proxy/: request_capture.py  server.py  traffic_stats.py
